# vibesignal

./: .gitignore  CUSTOMIZATIONS.md  DESIGN.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: VibeSignal.icns
docs/: widget-mockup.html
hooks/: claude-settings.snippet.json  codex-hooks.md  codex-hooks.snippet.json  codex-notify.py
scripts/: cowork-vibesignal-bridge  io.github.yzhao062.vibesignal.cowork-bridge.plist  render_icon.py  vibesignal-restyle
tests/: test_codex_usage_footer.py  test_hooks.py  test_installer.py  test_lock.py  test_main.py  test_panel.py  test_resolve.py  test_store.py  test_widget.py
vibesignal/: __init__.py  __main__.py  installer.py  light.py  lock.py  panel.py  resolve.py  store.py  widget.py
vibesignal/assets/: VibeSignal.icns  __init__.py
